--- a/Podplayer.ASP/Views/Shared/_ModelListDetailed.cshtml
+++ b/Podplayer.ASP/Views/Shared/_ModelListDetailed.cshtml
@@ -5,7 +5,7 @@
 {
     <div class="clearfix mb-5">
         <div class="w-25">
-            <a class="internal-nav float-left" href=@("podcast?id="+podcast.Id)>
+            <a class="internal-nav float-left" href=@("/podcast?id="+podcast.Id)>
                 <img class="model-item-image" src="@podcast.ImageLocation" alt="@podcast.Title image" />
             </a>
         </div>
