--- a/Podplayer.ASP/Views/Search/Category.cshtml
+++ b/Podplayer.ASP/Views/Search/Category.cshtml
@@ -14,6 +14,14 @@
     </form>
 </div>
 
-<div>
-    @await Html.PartialAsync("_ModelPane", Model)
+<div class="mt-5">
+    <div>
+        @await Html.PartialAsync("_ModelListDetailed", Model.Models)
+    </div>
+    @if (Model.TotalPages > 0)
+    {
+        <div class="text-center mt-5">
+            @await Component.InvokeAsync("PaginationNav", Model)
+        </div>
+    }
 </div>
